<resources>
    <string name="app_name">Matjakt</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_newProductNameText">This product doesn\'t seem to have a name in the database. Would you like to add one?</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_CancelText">Cancel</string>
    <string name="dialog_Yes">Yes</string>
    <string name="dialog_No">No</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_NoProductFound">No product found</string>
    <string name="dialog_BrokenProduct">Invalid or broken product</string>
    <string name="dialog_brokenProductBody">This product is in the database, but is missing some information. Would you like to add it?</string>
    <string name="dialog_RetrievingProduct">Retrieving product information…</string>
    <string name="dialog_updatingProductInfo">Updating product information…</string>
    <string name="dialog_insertingStore">Updating store database…</string>
    <string name="dialog_insertingPrice" translatable="false">Updating price database…</string>
    <string name="dialog_productDataChanged">You\'ve changed some data. Do you want to discard it?</string>
    <string name="dialog_loadingStoresAndPrices">Loading local stores and prices…</string>

    <string name="prompt_ScanACode">Scan a barcode</string>
    <string name="prompt_fillOutField">This field is required.</string>
    <string name="prompt_productUpdateFailed">Whoops! Could not update the product information.</string>
    <string name="prompt_addNewPrice">Add new price</string>

    <string name="debug_howDidYouGetHere">How did you get here?</string>
    <string name="debug_noInternet" translatable="false">No internet connection :(</string>

    <string name="ui_editBrand">Brand:</string>
    <string name="ui_editName">Name:</string>
    <string name="ui_editAmount">Amount:</string>
    <string name="ui_isOrganic">Organic</string>
    <string name="ui_isFairtrade">Fairtrade</string>
    <string name="ui_editPriceHint">New price</string>

    <string name="ui_brandHint">ACME</string>
    <string name="ui_nameHint">Wholegrain Bread</string>
    <string name="ui_weightHint">100</string>

    <string name="ui_defaultProductTitle">Brand Product Name Amount</string>
    <string name="ui_addAttributeButton">Add…</string>
    <string name="ui_scanButton">Scan</string>
    <string name="ui_shopMissingAddNew">Shop missing? Add new</string>
    <string name="ui_pricesLoading">Loading…</string>
    <string name="ui_editStoreChainHint">Chain (ACME)</string>
    <string name="ui_editStoreNameHint">Name (GroceryMart)</string>
    <string name="ui_dialog_addprice">Add new price</string>
    <string name="ui_addStoreTitle">Add new store</string>

    <string name="action_edit">Edit</string>

    <string-array name="ui_amount_types">
        <item>g</item>
        <item>kg</item>
        <item>mg</item>
        <item>pcs</item>
        <item>l</item>
        <item>dl</item>
        <item>cl</item>
        <item>ml</item>
    </string-array>

    <string-array name="ui_sidebar_menu_items">
        <item>Scan</item>
        <item>Settings</item>
        <item>About</item>
        <item>Bug Report</item>
        <item>Feature Request</item>
    </string-array>

    <string name="title_activity_view_product">View Product</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="title_activity_edit_product">Edit Product</string>
    <string name="title_activity_scanned_product">Scanned Product</string>

    <string name="dialog_deleteEntry">Do you want to delete this entry?</string>
    <string name="ui_settings_location">Location</string>
    <string name="ui_settings_preferredStoreDistance">Preferred store distance</string>
    <string name="ui_settings_maxStoreDistance">Maximum store distance</string>
    <string name="ui_settings_general">General</string>
    <string name="ui_settings_appearanceHint">Change app themes and visuals</string>
    <string name="ui_settings_locationHint">Change search distance settings</string>
    <string name="ui_settings_currency">Currency</string>
    <string name="ui_settings_appearance">Appearance</string>
    <string name="ui_settings_useDarkTheme">Use dark theme</string>
    <string name="ui_settings_defaultPreferredStoreDistance">2</string>
    <string name="ui_settings_defaultMaximumStoreDistance">10</string>
    <string name="ui_price_storeHint">Store</string>
    <string name="ui_price_isoffer">This price is a limited time offer</string>
    <string name="ui_pricelist_isoffer">Offer</string>
    <string name="ui_warning_noresult">Oops! Couldn\'t get the product - try again.</string>
    <string name="ui_sendbugreport">Send bug report</string>
    <string name="ui_about_aboutapp">About the App</string>
    <string name="ui_about_aboutattributions">Attributions</string>
    <string name="ui_about_aboutapp_body">Matjakt was created by Jarl Gullberg (jarl.gullberg@gmail.com). \n\nThe app is copyright 2015 to Jarl Gullberg, as is the Matjakt database of prices. \n\nThe app is currently maintained by Jarl Gullberg.</string>
    <string name="ui_about_aboutattributions_body">Product matching is provided by Outpan Technologies Inc. \n\nStore location matching is powered by Google. \n\nCheck icon was designed by Freepik.</string>
    <string name="ui_drawer_open">Open drawer</string>
    <string name="ui_drawer_close">Close drawer</string>
    <string name="ui_price_addnewprice">+ Add new price…</string>
    <string name="ui_price_lastupdated">Last updated:</string>
    <string name="ui_price_expires">Expires:</string>
    <string name="ui_price_store_address">Store Address:</string>
    <string name="ui_general_edit">Edit</string>
    <string name="ui_expires_never">Never</string>
    <string name="ui_dialog_editprice">Edit Price</string>
    <string name="ui_general_delete">Delete</string>
    <string name="management_unauthorized">Oops! You\'re not authorized to do that :(</string>
    <string name="ui_preview_somedate">Some Date</string>
    <string name="ui_preview_someexpirationdate">Some Expiration Date</string>
    <string name="ui_preview_someaddress">Some Address</string>
    <string name="ui_content_poweredbygoogle">Powered by Google</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_mightBeByWeight">Possible by-weight product</string>
    <string name="dialog_mightBeByWeight_body">This product might be sold by weight, instead of using a fixed price. Would you like to view it as one?</string>
</resources>
