<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.nihlus.matjakt.ui.MainSettingsFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ui_settings_location"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_settings_preferredStoreDistance"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/preferredStoreDistanceText"
            android:layout_alignTop="@+id/textView6"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginStart="48dp"
            android:hint="@string/ui_settings_defaultPreferredStoreDistance"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/maximumStoreDistanceText"
            android:layout_below="@+id/preferredStoreDistanceText"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/preferredStoreDistanceText"
            android:hint="@string/ui_settings_defaultMaximumStoreDistance"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_settings_maxStoreDistance"
            android:id="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/maximumStoreDistanceText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ui_settings_locationHint"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ui_settings_currency"
            android:id="@+id/textView8"
            android:layout_below="@+id/maximumStoreDistanceText"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currencySpinner"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true"
            android:spinnerMode="dialog"
            android:longClickable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ui_settings_appearance"
            android:id="@+id/textView9"
            android:layout_below="@+id/currencySpinner"
            android:layout_alignParentStart="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_settings_useDarkTheme"
            android:id="@+id/useDarkThemeCheckbox"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            android:checked="false"/>

    </RelativeLayout>
</FrameLayout>
