<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.nihlus.matjakt.UI.ViewProductActivity">

    <com.nihlus.matjakt.UI.Custom.AutoResizeTextView
        android:id="@+id/textView_ProductTitle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ellipsize="none"
        android:maxLines="1"
        android:paddingBottom="5dp"
        android:text="@string/ui_defaultProductTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <View
        android:id="@+id/divider1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/textView_ProductTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#5c6b65"
        android:paddingBottom="16dp"/>

    <HorizontalScrollView
        android:id="@+id/imageGalleryScrollView"
        android:layout_width="fill_parent"
        android:layout_height="208dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider1"
        android:fillViewport="false"
        android:paddingTop="0dp">

    </HorizontalScrollView>

    <View
        android:id="@+id/divider2"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/imageGalleryScrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#5c6b65"
        android:paddingBottom="16dp"/>

    <ListView
        android:id="@+id/listView_Prices"
        android:layout_width="wrap_content"
        android:layout_height="192dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider2"
        android:fastScrollAlwaysVisible="false"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/listView_Prices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#5c6b65"
        android:paddingBottom="16dp"/>

    <Button
        android:id="@+id/button_AddAttribute"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ui_addAttributeButton"/>

    <Button
        android:id="@+id/button_Scan"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/button_AddAttribute"
        android:layout_below="@+id/divider3"
        android:text="@string/ui_scanButton"
        android:onClick="onScanButtonClicked"/>

</RelativeLayout>
